--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-bcrypt==4.2.0
 Flask==3.0.3
 Flask-Cors==5.0.0
 Flask-Login==0.6.3
@@ -8,6 +7,7 @@ gunicorn==21.2.0
 mysql-connector-python==9.1.0
 mysqlclient==2.2.5
 psutil==6.0.0
+pytest==8.3.3
 python-dotenv==1.0.1
 requests==2.32.3
 SQLAlchemy==2.0.31
