--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,12 +53,12 @@ jobs:
         echo "RDS_USERNAME=${{ secrets.RDS_USERNAME }}" >> $GITHUB_ENV
         echo "RDS_PASSWORD=${{ secrets.RDS_PASSWORD }}" >> $GITHUB_ENV
 
-    # # Set additional environment variables (Flask, Spotify, etc.)
-    # - name: Set additional environment variables
-    #   run: |
-    #     echo "FLASK_SECRET_KEY=${{ secrets.FLASK_SECRET_KEY }}" >> $GITHUB_ENV
-    #     echo "SPOTIFY_CLIENT_ID=${{ secrets.SPOTIFY_CLIENT_ID }}" >> $GITHUB_ENV
-    #     echo "SPOTIFY_CLIENT_SECRET=${{ secrets.SPOTIFY_CLIENT_SECRET }}" >> $GITHUB_ENV
+    # Set environment variables for Spotify API and others
+    - name: Set environment variables
+      run: |
+        echo "CLIENT_ID=${{ secrets.SPOTIFY_CLIENT_ID }}" >> $GITHUB_ENV
+        echo "CLIENT_SECRET_ID=${{ secrets.SPOTIFY_CLIENT_SECRET_ID }}" >> $GITHUB_ENV
+        echo "REDIRECT_URI=${{ secrets.REDIRECT_URI }}" >> $GITHUB_ENV
   
     # Install Python dependencies
     - name: Install dependencies for backend
